# Level1

./: x.txt
SecureIoT/: LICENSE-COMMUNITY.md  LICENSE-ENTERPRISE.md  README.md
SecureIoT-VIF-Enterprise/: CMakeLists.txt  LICENSE  README.md  requirements.txt  sdkconfig.defaults
SecureIoT-VIF-Enterprise/compliance/: IEC_62443_compliance.md  ISO_27001_checklist.md  security_certifications.md
SecureIoT-VIF-Enterprise/components/attestation/: CMakeLists.txt  attestation_manager.c  remote_verifier.c
SecureIoT-VIF-Enterprise/components/attestation/include/: attestation_manager.h  remote_verifier.h
SecureIoT-VIF-Enterprise/components/firmware_verification/: CMakeLists.txt  integrity_checker.c  signature_verifier.c
SecureIoT-VIF-Enterprise/components/firmware_verification/include/: integrity_checker.h  signature_verifier.h
SecureIoT-VIF-Enterprise/components/secure_element/: CMakeLists.txt  crypto_operations.c  esp32_crypto_manager.c
SecureIoT-VIF-Enterprise/components/secure_element/include/: crypto_operations.h  esp32_crypto_manager.h  se_manager.h
SecureIoT-VIF-Enterprise/components/security_monitor/: CMakeLists.txt  anomaly_detector.c  incident_manager.c
SecureIoT-VIF-Enterprise/components/security_monitor/include/: anomaly_detector.h  incident_manager.h
SecureIoT-VIF-Enterprise/components/sensor_interface/: CMakeLists.txt  dht22_driver.c  sensor_manager.c
SecureIoT-VIF-Enterprise/components/sensor_interface/include/: dht22_driver.h  sensor_manager.h
SecureIoT-VIF-Enterprise/configs/: enterprise-development.config  enterprise-production.config  power-management.config
SecureIoT-VIF-Enterprise/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  main.c
SecureIoT-VIF-Enterprise/tests/: test_community_features.py  test_enterprise_security.py  test_hardware_validation.py  test_real_time_integrity.py  test_stress_performance.py
SecureIoT-VIF-Enterprise/tools/: enterprise_flash_tool.py  monitoring_dashboard.py  performance_analyzer.py  requirements.txt  security_validator.py
